maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	def keepHandOnRightWall()
	{
		{
		droite();
		if (estFaceMur)
		{
		droite();
		if (estFaceMur)
		{gauche();gauche()}
		if (!estFaceMur){
		retourne()}
		}
				}
		if (!estFaceMur)
		{
		avance()
		}
	}
		}
			while(!estSurBiscuit())
			{
		if (!estFaceMur && (getDirection() == Direction.NORTH))
		{
			avance()
		}
		else 
		keepHandOnRightWall();
	
}

